force-app/main/default/objects/Case/fields/Duplicate_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Group_ID__c</fullName>
    <externalId>true</externalId>
    <label>Duplicate Group ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>