force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pothole</fullName>
            </value>
            <value>
                <fullName>Water Issue</fullName>
            </value>
            <value>
                <fullName>Waste Management</fullName>
            </value>
            <value>
                <fullName>Streetlight</fullName>
            </value>
            <value>
                <fullName>Traffic Signal</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Parks &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Noise Complaint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>