force-app/main/default/objects/Case/fields/Public_Tracking_Token__c.field-meta.xml
<CustomField>
    <fullName>Public_Tracking_Token__c</fullName>
    <externalId>true</externalId>
    <label>Public Tracking Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>