force-app/main/default/objects/Case/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <defaultValue>&quot;Web Portal&quot;</defaultValue>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Portal</fullName>
            </value>
            <value>
                <fullName>Telegram Bot</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone/IVR</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>