force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <inlineHelpText>Specific details about the issue type (e.g., &apos;Broken pipe&apos;, &apos;Missing garbage pickup&apos;)</inlineHelpText>
    <label>Issue Subtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>