force-app/main/default/objects/Case/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward/Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>